# esp32_nes_emulator

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/nofrendo/: memguard.h  nofrendo.c  vid_drv.c
components/nofrendo-esp32/: osd.c  psxcontroller.c  psxcontroller.h  spi_lcd.c  spi_lcd.h  video_audio.c
components/nofrendo/libsnss/: libsnss.c
components/nofrendo/nes/: nes.c  nes.h  nes_ppu.c
main/: CMakeLists.txt  main.c
